Simple example of Razor syntax.

--- a/ExploreCalifornia/Views/Home/index.cshtml
+++ b/ExploreCalifornia/Views/Home/index.cshtml
@@ -124,6 +124,9 @@
     </ul>
   </section>
   <section id="companyInfo">
+    <p>
+        Copyright @DateTime.Now.Year
+    </p>
   <h1>Contact</h1>
   <h2>Explore California</h2>
       <p>5605 Nota Street<br />
