--- a/ExploreCalifornia/Views/Home/index.cshtml
+++ b/ExploreCalifornia/Views/Home/index.cshtml
@@ -42,6 +42,7 @@
         <li><a href="explorers.htm" title="Our community">Explorers <br /><span class="tagline">join our community</span></a>
           <ul>
             <li><a href="explorers/join.htm" title="join our community">Join the Explorers</a></li>
+            <li><a href="@Url.Action("Index", "blog")" title="join our community">Read the Blog</a></li>
             <li>@Html.ActionLink("Read the Blog", "index", "blog", null, new {title = "Read!"})</li>
             <li><a href="explorers/gallery.htm" title="contributor photos">Tour Photos</a></li>
             <li><a href="_video/EC_podcast_full version.mov" title="check out our podcast">Video podcast</a></li>
