Simple example of RenderSection.

--- a/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -57,8 +57,7 @@
     </nav>
   </header>
   <section id="actionCall">
-  <h1>Explore our world your way</h1>
-  <a href="/tours.htm" title="Find your tour!"><h2>Find your tour</h2></a>
+    @RenderSection("header")
   </section>
   <div id="contentWrapper">
       <section id="mainContent">
