Set the required parameter to false to avoid failures.

--- a/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
     </nav>
   </header>
   <section id="actionCall">
-    @RenderSection("header")
+    @RenderSection("header", false)
   </section>
   <div id="contentWrapper">
       <section id="mainContent">
