--- a/ExploreCalifornia/Views/Blog/Create.cshtml
+++ b/ExploreCalifornia/Views/Blog/Create.cshtml
@@ -6,5 +6,18 @@
 <h1>Create Blog Post</h1>
 
 <fieldset>
-    
+    @using (Html.BeginForm())
+    {
+        <p>
+            @Html.LabelFor(x => x.Title)
+            @Html.EditorFor(x => x.Title)
+        </p>
+        <p>
+            @Html.LabelFor(x => x.Body)
+            @Html.TextAreaFor(x => x.Body)
+        </p>
+        <p>
+            <button type="submit">Create Post</button>
+        </p>
+    }
 </fieldset>
