--- a/ExploreCalifornia/Views/Blog/Create.cshtml
+++ b/ExploreCalifornia/Views/Blog/Create.cshtml
@@ -8,13 +8,16 @@
 <fieldset>
     @using (Html.BeginForm())
     {
+        @Html.ValidationSummary()
         <p>
             @Html.LabelFor(x => x.Title)
             @Html.EditorFor(x => x.Title)
+            @Html.ValidationMessageFor(x => x.Title)
         </p>
         <p>
             @Html.LabelFor(x => x.Body)
             @Html.TextAreaFor(x => x.Body)
+            @Html.ValidationMessageFor(x => x.Body)
         </p>
         <p>
             <button type="submit">Create Post</button>
