--- a/ExploreCalifornia/Views/Blog/Create.cshtml
+++ b/ExploreCalifornia/Views/Blog/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExploreCalifornia.Models.Post
+﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@model ExploreCalifornia.Models.Post
 @{
     Layout = "_Layout";
 }
@@ -6,21 +7,20 @@
 <h1>Create Blog Post</h1>
 
 <fieldset>
-    @using (Html.BeginForm())
-    {
-        @Html.ValidationSummary()
+    <form asp-action="Create" asp-controller="Blog">
+        <div asp-validation-summary="All" class="input-validation-error"></div>
         <p>
-            @Html.LabelFor(x => x.Title)
-            @Html.EditorFor(x => x.Title)
-            @Html.ValidationMessageFor(x => x.Title)
+            <label asp-for="Title"></label>
+            <input asp-for="Title" class="form-control" placeholder="Blog Post Title" />
+            <span asp-validation-for="Title" ></span>
         </p>
         <p>
-            @Html.LabelFor(x => x.Body)
-            @Html.TextAreaFor(x => x.Body)
-            @Html.ValidationMessageFor(x => x.Body)
+            <label asp-for="Body"></label>
+            <textarea asp-for="Body" class="form-control" placeholder="Blog Post Content" > </textarea>
+            <span asp-validation-for="Body"></span>
         </p>
         <p>
             <button type="submit">Create Post</button>
         </p>
-    }
+    </form>
 </fieldset>
