Show the posts from the DB dynamically on the Index page.

--- a/ExploreCalifornia/Views/Blog/Index.cshtml
+++ b/ExploreCalifornia/Views/Blog/Index.cshtml
@@ -7,5 +7,17 @@
 <p>Below are the lates posts:</p>
 
 <div class="blog-posts">
-    TODO: Blog post should be here.
+    @foreach (var post in Model)
+    {
+        <article class="blog-post">
+            <h1>@post.Title</h1>
+
+            <div class="details">
+                Posted <span>@post.Posted</span> by <span>@post.Author</span>
+            </div>
+            <div class="content">
+                @post.Body
+            </div>
+        </article>
+    }
 </div>
