Update Index to show post titles as links and also the Post action to show a post dynamically based on the Route parameters.

--- a/ExploreCalifornia/Views/Blog/Index.cshtml
+++ b/ExploreCalifornia/Views/Blog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<ExploreCalifornia.Models.Post>
+@{
     Layout = "_Layout";
 }
 
@@ -10,7 +11,11 @@
     @foreach (var post in Model)
     {
         <article class="blog-post">
-            <h1>@post.Title</h1>
+            <h1>
+                @Html.ActionLink(post.Title, "Post", "Blog",
+                    new { year = post.Posted.Year, month = post.Posted.Month, key = post.Key }
+                    )
+            </h1>
 
             <div class="details">
                 Posted <span>@post.Posted</span> by <span>@post.Author</span>
