--- a/ExploreCalifornia/Views/Blog/Post.cshtml
+++ b/ExploreCalifornia/Views/Blog/Post.cshtml
@@ -3,12 +3,4 @@
     Layout = "_Layout";
 }
 
-<article class="blog-post">
-    <h1>@Model.Title</h1>
-    <div class="detials">
-        Posted <span>@Model.Posted</span> 
-        by <span>@Model.Author</span>
-    </div>
-    <div class="content">@Model.Body</div>
-</article>
-
+@await Html.PartialAsync("_Post")
