--- a/ExploreCalifornia/Views/Blog/Index.cshtml
+++ b/ExploreCalifornia/Views/Blog/Index.cshtml
@@ -7,6 +7,22 @@
 
 <p>Below are the lates posts:</p>
 
+<p class="pager">
+    @if (ViewBag.HasPreviousPage)
+    {
+        <a class="prev" href="@Url.Action("Index", "Blog" , new { page = ViewBag.PreviousPage })">
+            &lt; Previous
+        </a>
+    }
+
+    @if (ViewBag.HasNextPage)
+    {
+        <a class="next" href="@Url.Action("Index", "Blog" , new { page = ViewBag.NextPage })">
+            Next &gt;
+        </a>
+    }
+</p>
+
 <div class="blog-posts">
     @foreach (var post in Model)
     {
