--- a/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
     <script type="text/javascript" src="~/scripts/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="~/scripts/site.js"></script>
 <link href="/css/main.css" rel="stylesheet" type="text/css" media="screen, projection">
 </head>
 <body id="home" class="no-js">
